# books_exercicio

./: Dockerfile  README.md  db.sqlite3  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializers.py
order/test/test_serializers/: __init__.py
order/test/test_views/: __init__.py  test_order_views.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/test/test_serializers/: __init__.py  test_category_serializers.py  test_product_serializers.py
product/test/test_viewset/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/viewset/: category_viewset.py  product_viewset.py
