[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["tamires_camargo <tamires.camargo.soares@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
factory-boy = "^3.3.0"
pytest = "^7.4.2"
django = "^4.2.5"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
